Apply everything & fix lyrics jumping around (still jumps but lot less)

--- a/CustomApps/lyrics-plus/style.css
+++ b/CustomApps/lyrics-plus/style.css
@@ -121,7 +121,8 @@
 }
 
 .lyrics-lyricsContainer-SyncedLyrics {
-    grid-area: 2/1/-3/-1
+    grid-area: 2/1/-3/-1;
+    max-width: 84%;
 }
 
 .lyrics-lyricsContainer-LyricsLine {
